Feat [front-end files]

--- a/Grocery Store Website/index.html
+++ b/Grocery Store Website/index.html
@@ -266,6 +266,7 @@
             <div class="box">
                 <img src="image/meat-product.png" alt="">
                 <h3>fresh meat</h3>
+                <p>upto 45% off</p>
                 <a href="#" class="btn">shop now</a>
             </div>
         </div>
